--- a/src/Style/main.scss
+++ b/src/Style/main.scss
@@ -1,7 +1,10 @@
 @use './variaveis';
 @use './inicial';
-@use './DSGo';
+@use './SENAICraft';
 @use './menu';
 @use './missaoCard';
 @use './modal';
 @use './Camera';
+@use './Botao';
+@use './Introducao';
+@use './Cabecalho';
