Página principal finalizada ; menu/rodapé responsivo ; responsividade aplicada nas páginas de introdução e home e mudanças de nomes de arquivos missão para perguntas.

--- a/src/Style/_Cabecalho.scss
+++ b/src/Style/_Cabecalho.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    padding: 2.5rem;
+    padding: 1.5625rem 3.75rem;
 
     .logo {
         width: 17.5rem;
