--- a/src/Style/main.scss
+++ b/src/Style/main.scss
@@ -2,7 +2,7 @@
 @use './inicial';
 @use './SENAICraft';
 @use './menu';
-@use './missaoCard';
+@use './Missao';
 @use './modal';
 @use './Camera';
 @use './Botao';
