--- a/src/Style/_menu.scss
+++ b/src/Style/_menu.scss
@@ -6,4 +6,83 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 1.25rem;
+
+  // Estilizando o menu de opções
+  .menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3.75rem;
+    background-color: $bloco-diamante;
+    padding: 10px 3.75rem;
+    border: none;
+    border-radius: 1.5625rem;
+
+    .perguntas {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .inventario {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .geoLocalizacao {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .camera {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .texto {
+      font-size: 1rem;
+    }
+
+    .imagemOpcao {
+      transition: transform 0.3s ease;
+    }
+
+    .imagemOpcao:hover {
+      transform: scale(1.10);
+    }
+  }
+}
+
+// Responsividade para telas com 1440px de largura
+@media screen and (max-width: 1440px) {
+  .rodape {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1.25rem;
+    position: relative;
+    top: 0;
+    left: 0;
+
+    .menu {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 3.75rem;
+      background-color: $bloco-diamante;
+      padding: 10px 3.75rem;
+      border: none;
+      border-radius: 1.5625rem;
+      position: absolute;
+      top: -7.1875rem;
+    }
+  }
 }
