--- a/src/Style/main.scss
+++ b/src/Style/main.scss
@@ -1,10 +1,8 @@
 @use './variaveis';
-@use './inicial';
 @use './SENAICraft';
 @use './menu';
-@use './Missao';
+@use './Perguntas';
 @use './modal';
 @use './Camera';
-@use './Botao';
 @use './Introducao';
 @use './Cabecalho';
