--- a/src/Style/_modal.scss
+++ b/src/Style/_modal.scss
@@ -1,22 +1,23 @@
+// Importando as variáveis globais
 @use './variaveis' as *;
 
-dialog.modal {
+// Estilizando o posicionamento do container do modal
+.containerModal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 50%;
-  max-height: 80%;
-
-  border-radius: 16px;
-  padding: 2rem;
-  text-align: center;
-
-
-  box-shadow: 0 0 12px rgba(163, 7, 132, 0.7),
-              0 8px 24px rgba(0, 0, 0, 0.4);
-
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
   z-index: 1000;
+
+  // Estilizando o modal
+  .modal {
+    background-color: white;
+  }
 
   .titulo {
     margin-bottom: 2rem;
@@ -56,4 +57,4 @@ dialog.modal {
     margin-top: 1rem;
     width: 100px;
   }
-}
+} 
