--- a/src/Style/_modal.scss
+++ b/src/Style/_modal.scss
@@ -16,45 +16,85 @@
 
   // Estilizando o modal
   .modal {
-    background-color: white;
-  }
+    background-color: $bloco-diamante;
+    padding: 1.875rem;
+    border-radius: 1.5625rem;
+    width: 28.125rem;
+    height: auto;
 
-  .titulo {
-    margin-bottom: 2rem;
+    .titulo {
+      margin-bottom: 2rem;
+      font-size: 1.5625rem;
+      text-align: center;
+    }
 
-    font-size: 1.6rem;
-  }
+    .descricaoPergunta {
+      margin-bottom: 2rem;
+      line-height: 1.5rem;
+      font-size: 1.125rem;
+      text-align: center;
+    }
 
-  p {
-    margin-bottom: 1.5rem;
+    .labelPergunta {
+      font-size: 1.125rem;
+    }
 
-    line-height: 1.5;
-  }
+    .caixaTexto {
+      width: 100%;
+      height: 2.5rem;
+      padding: 0.6rem;
+      margin-top: 5px;
+      margin-bottom: 1rem;
+      font-size: 1rem; 
+      border: none;
+      border-radius: 15px;
+      background-color: $netherrack;
+      color: $cor-fonte-clara;
+      outline: none;
+    }
 
-  .caixaTexto {
-    width: 80%;
-    padding: 0.6rem;
-    margin-bottom: 1rem;
-    border-radius: 6px;
+    // Alterando a cor da fonte do placeholder
+    .caixaTexto::-webkit-input-placeholder {
+      color: $cor-fonte-clara;
+    }
 
-    font-size: 1.2rem;
+    .modal-botoes {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1rem;
+      gap: 2.5rem;
 
-    
-  }
+      .botao {
+        width: 5.3125rem;
+        height: 1.875rem;
+        background-color: $netherrack;
+        border: none;
+        border-radius: 15px;
+        color: white;
+        font-size: 1rem;
+        transition: background-color 0.2s ease;
+        cursor: pointer;
+      }
 
-  .modal-botoes {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    margin-top: 1rem;
-  }
+      .botao:hover {
+        background-color: #0709FF;
+      }
+    }
 
-  .resultado {
-    margin-top: 1.5rem;
-  }
+    .resultado {
+      margin-top: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
 
-  img {
-    margin-top: 1rem;
-    width: 100px;
+    img {
+      margin-top: 1rem;
+      width: 6.25rem;
+      height: 6.25rem;
+      border-radius: 15px;
+    }
   }
 } 
