--- a/src/Style/_modal.scss
+++ b/src/Style/_modal.scss
@@ -1,6 +1,14 @@
 // Importando as variáveis globais
 @use './variaveis' as *;
 
+// Adicionando uma animação no modal
+@keyframes fadeModal {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 // Estilizando o posicionamento do container do modal
 .containerModal {
   display: flex;
@@ -21,6 +29,9 @@
     border-radius: 1.5625rem;
     width: 28.125rem;
     height: auto;
+    opacity: 0;
+    transform: translateY(-20px);
+    animation: fadeModal 0.5s ease-in-out forwards;
 
     .titulo {
       margin-bottom: 2rem;
@@ -92,8 +103,10 @@
 
     img {
       margin-top: 1rem;
-      width: 6.25rem;
-      height: 6.25rem;
+      width: 9.375rem;
+      height: 9.375rem;
+      border: none;
+      border-radius: 15px;
       border-radius: 15px;
     }
   }
