--- a/src/Style/_Camera.scss
+++ b/src/Style/_Camera.scss
@@ -32,6 +32,7 @@
             height: 100%;
             object-fit: cover;
             border-radius: 15px;
+            box-shadow: 4px 4px 10px rgb(0, 0, 0, 0.25);
         }
     }
 
