--- a/src/Style/_Camera.scss
+++ b/src/Style/_Camera.scss
@@ -1,6 +1,6 @@
 // Importando as variáveis globais
 @use './variaveis' as *;
- 
+
 // Estilizando o container da câmera
 .camera-box {
     padding: 2rem;
@@ -9,16 +9,16 @@
     text-align: center;
     display: flex;
     flex-direction: column;
- 
+
     .tituloCamera {
         font-size: 2.1875rem;
         margin-bottom: 1rem;
         font-family: $fonte-titulos;
     }
- 
+
     .preview {
-        width: 600px;
-        height: 350px;
+        width: 37.5rem;
+        height: 21.875rem;
         border-radius: 15px;
         overflow: hidden;
         padding-bottom: 2rem;
@@ -26,8 +26,9 @@
         justify-content: center;
         align-items: center;
         margin: 0 auto;
-        
-        video, img {
+
+        video,
+        img {
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -39,7 +40,7 @@
     .botoesFoto {
         display: flex;
         justify-content: center;
-            
+
         .tirarFoto {
             background-color: $netherrack;
             width: 7.5rem;
@@ -67,6 +68,17 @@
                 color: $cor-fonte-clara;
                 cursor: pointer;
             }
+        }
+
+        .limparGaleria {
+            width: 8.4375rem;
+            height: 1.875rem;
+            font-size: 1rem;
+            background-color: $netherrack;
+            border: none;
+            border-radius: 15px;
+            color: $cor-fonte-clara;
+            cursor: pointer;
         }
     }
 }
