--- a/src/Style/_Perguntas.scss
+++ b/src/Style/_Perguntas.scss
@@ -60,11 +60,22 @@
           position: absolute;
           cursor: pointer;
           z-index: 2;
-          transform: translate(-50%, -50%);
+          transition: transform 0.3s ease-in-out;
+        }
+
+        .bannerPerguntas:hover {
+          transition: transform 0.3s ease-in-out;
+          transform: scale(1.2);
         }
 
         .bannerPerguntas.perguntaRespondida {
           cursor: default;
+          transition: transform 0.3s ease-in-out;
+        }
+
+        .bannerPerguntas.perguntaRespondida:hover {
+          transform: scale(0.8);
+          transition: transform 0.3s ease-in-out;
         }
       }
 
@@ -139,12 +150,11 @@
       color: $cor-fonte-escura;
       overflow-y: auto;
       width: 75rem;
-      max-height: 555px;
+      max-height: 34.6875rem;
       scrollbar-color: $bloco-diamante;
 
       .tituloPerguntas {
-        font-family: $fonte-titulos;
-        font-size: 2.1875rem;
+        font-size: 1.125rem;
         text-align: center;
         margin-bottom: 1.25rem;
       }
