--- a/src/Style/_inventario.scss
+++ b/src/Style/_inventario.scss
@@ -7,25 +7,20 @@
   justify-content: center;
   background-color: $bloco-diamante-opaco;
   max-width: 62.5rem;
-  height: 560px;
+  height: 35rem;
   margin: 0 auto;
-  border-radius: 25px;
-  margin-bottom: 20px;
+  border-radius: 1.5625rem;
+  margin-bottom: 1.25rem;
 
   .inventario {
-    padding: 2rem;
+    padding: 1.5rem;
     text-align: center;
-    color: #fff;
 
     .tituloInventario {
-      font-size: 35px;
+      font-size: 2.1875rem;
       font-family: $fonte-titulos;
       color: $cor-fonte-escura;
-    }
-
-    h2 {
-      margin-bottom: 1.5rem;
-      font-size: 2rem;
+      margin-bottom: 1.25rem;
     }
 
     .vazio {
@@ -40,32 +35,47 @@
       grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
       justify-items: center;
       margin-top: 15px;
-    }
 
-    .figurinha {
-
-      border-radius: 12px;
-      padding: 1rem;
-      box-shadow: 0 0 8px rgba(0,0,0,0.4);
-      transition: transform 0.2s;
-      width: 100%;
-      max-width: 150px;
-
-
-      &:hover {
-        transform: scale(1.05);
-      }
-
-      img {
+      .figurinha {
+        border-radius: 15px;
+        padding: 1rem;
+        box-shadow: 10px 10px 4px rgba(0, 0, 0, 0.25);
+        transition: transform 0.2s;
         width: 100%;
-        max-width: 100px;
-        margin-bottom: 0.5rem;
+        max-width: 9.375rem;
+
+        &:hover {
+          transform: scale(1.05);
+        }
+
+        img {
+          width: 100%;
+          max-width: 6.25rem;
+          margin-bottom: 0.5rem;
+        }
+
+        p {
+          margin: 0;
+          font-weight: bold;
+          font-size: 1rem;
+        }
       }
 
-      p {
-        margin: 0;
-        font-weight: bold;
-        font-size: 1rem;
+      .limparInventario {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .botaoLimparInventario {
+          background-color: $netherrack;
+          font-size: 1.125rem;
+          width: 8.4375rem;
+          height: 1.875rem;
+          color: $cor-fonte-clara;
+          border: none;
+          border-radius: 15px;
+          cursor: pointer;
+        }
       }
     }
   }
@@ -97,10 +107,10 @@
     }
 
     .figurinha {
-      max-width: 100px;
+      max-width: 6.25rem;
 
       img {
-        max-width: 80px;
+        max-width: 5rem;
       }
 
       p {
