--- a/src/Style/_inventario.scss
+++ b/src/Style/_inventario.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   background-color: $bloco-diamante-opaco;
   max-width: 62.5rem;
-  max-height: 570px;
+  max-height: 35.625rem;
   height: auto;
   margin: 0 auto;
   overflow-y: auto;
