--- a/src/Style/_inventario.scss
+++ b/src/Style/_inventario.scss
@@ -64,8 +64,8 @@
           width: 100%;
 
           .imagemFigurinha {
-            width: 18.75rem;
-            height: 20.3125rem;
+            width: 315px;
+            height: 320px;
             box-shadow: 10px 10px 4px rgba(0, 0, 0, 0.25);
             border-radius: 1.25rem;
           }
